<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".Activity.LoginTecnico">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="351dp"
        android:layout_height="332dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvInicioSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INICIO DE SESIÓN TÉCNICO"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvInicioSesion"
        app:layout_constraintStart_toStartOf="parent"

        app:boxStrokeColor="@color/atoll"
        app:hintTextColor="@color/atoll"


        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre de Usuario"

            android:textColor="@color/atoll"
            android:textColorHint="@color/atoll"

            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña con toggle -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/layoutUsuario"
        app:layout_constraintStart_toStartOf="parent"

        app:boxStrokeColor="@color/atoll"
        app:hintTextColor="@color/atoll"

        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            app:boxStrokeColor="@color/atoll"
            app:hintTextColor="@color/atoll"

            android:hint="Contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón -->
    <Button
        android:id="@+id/BTAceptarlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:text="Continuar"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
